--- a/app/src/main/res/layout/album_detail_item_layout.xml
+++ b/app/src/main/res/layout/album_detail_item_layout.xml
@@ -8,6 +8,20 @@
     tools:ignore="MissingDefaultResource">
 
     <TextView
+        android:id="@+id/tv_RedEnvelopePhotos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingLeft="@dimen/dimen_15"
+        android:paddingTop="@dimen/dp_10"
+        android:paddingBottom="@dimen/dp_10"
+        android:text="红包照片"
+        android:textSize="@dimen/text_size_15"
+        android:textColor="@color/black"
+        android:drawableLeft="@mipmap/unselected_logo"
+        android:drawablePadding="@dimen/dp_10"
+        android:layout_alignParentBottom="true"/>
+    <TextView
         android:id="@+id/tv_BurnAfterReading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,8 +34,7 @@
         android:textColor="@color/black"
         android:drawableLeft="@mipmap/unselected_logo"
         android:drawablePadding="@dimen/dp_10"
-        android:layout_alignParentBottom="true"
-        android:visibility="gone"/>
+        android:layout_above="@+id/tv_RedEnvelopePhotos"/>
 
     <ImageView
         android:id="@+id/img_album_detail_item"
