--- a/app/src/main/res/layout/item_mephoto_layout.xml
+++ b/app/src/main/res/layout/item_mephoto_layout.xml
@@ -45,4 +45,26 @@
         android:gravity="center"
         android:visibility="gone"/>
 
+    <RelativeLayout
+        android:id="@+id/rl_RedEnvelopePhotos"
+        android:layout_width="@dimen/dp_size_62"
+        android:layout_height="@dimen/dp_size_62"
+        android:layout_centerInParent="true"
+        android:background="@mipmap/redenvelopephotos_bg_logo"
+        android:visibility="gone">
+        <TextView
+            android:id="@+id/tv_RedEnvelopePhotos"
+            android:layout_width="@dimen/dp_size_62"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:layout_alignParentBottom="true"
+            android:background="@mipmap/burnafterreading_logo"
+            android:text="阅后即焚的红包照片"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_8"
+            android:gravity="center"
+            android:paddingLeft="@dimen/dimen_5"
+            android:paddingRight="@dimen/dimen_5"/>
+    </RelativeLayout>
+
 </RelativeLayout>
