--- a/app/src/main/res/layout/item_mephoto_layout.xml
+++ b/app/src/main/res/layout/item_mephoto_layout.xml
@@ -33,7 +33,8 @@
             android:textSize="@dimen/text_size_10"
             android:gravity="center"
             android:layout_marginLeft="@dimen/dp_size_1"
-            android:layout_marginRight="@dimen/dp_size_1"/>
+            android:layout_marginRight="@dimen/dp_size_1"
+            android:layout_marginBottom="@dimen/dp_size_1"/>
     </RelativeLayout>
 
     <TextView
@@ -69,7 +70,8 @@
             android:paddingLeft="@dimen/dimen_5"
             android:paddingRight="@dimen/dimen_5"
             android:layout_marginLeft="@dimen/dp_size_1"
-            android:layout_marginRight="@dimen/dp_size_1"/>
+            android:layout_marginRight="@dimen/dp_size_1"
+            android:layout_marginBottom="@dimen/dp_size_1"/>
     </RelativeLayout>
 
 </RelativeLayout>
